Se arregla la carga del JSON en la app starwars